--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="video">
         <div class="video-inner">
-          <video autoplay="" controls="" width="100%" id="video" src="m/1.mp4">
+          <video autoplay="" controls="" width="100%" id="video" src="1.mp4">
             <h3>BUAT LU NIH PARA JOMOK</h3>
             <source type="video/mp4">
             Your browser does not support the video tag.
